--- a/page4.html
+++ b/page4.html
@@ -105,9 +105,8 @@
                                 </div>
                                 <div class="col-md-auto">
                                     <p class="price mbr-fonts-style display-2">$17,99</p>
-                                    <div class="mbr-section-btn"><a href="https://mobiri.se" class="btn btn-primary display-4">
-                                            Buy Now
-                                        </a></div>
+                                    <div class="mbr-section-btn"><a href="https://go.kiwify.com.br/1h2U7ON" class="btn btn-primary display-4" target="_blank">
+                                            Comprar</a></div>
                                 </div>
                                 <div class="col-lg-2 d-none d-lg-block"></div>
                             </div>
@@ -137,11 +136,8 @@
                                 </div>
                                 <div class="col-md-auto">
                                     <p class="price mbr-fonts-style display-2">$17,99</p>
-                                    <div class="mbr-section-btn">
-                                        <a href="https://mobiri.se" class="btn btn-primary display-4">
-                                            Buy Now
-                                        </a>
-                                    </div>
+                                    <div class="mbr-section-btn"><a href="https://go.kiwify.com.br/OBhK4Og" class="btn btn-primary display-4" target="_blank">
+                                            Comprar</a></div>
                                 </div>
                                 <div class="col-lg-2 d-none d-lg-block"></div>
                             </div>
@@ -167,11 +163,8 @@
                                 </div>
                                 <div class="col-md-auto">
                                     <p class="price mbr-fonts-style display-2">$17,99</p>
-                                    <div class="mbr-section-btn">
-                                        <a href="https://mobiri.se" class="btn btn-primary display-4">
-                                            Buy Now
-                                        </a>
-                                    </div>
+                                    <div class="mbr-section-btn"><a href="https://go.kiwify.com.br/HPj0bFV" class="btn btn-primary display-4" target="_blank">
+                                            Comprar</a></div>
                                 </div>
                                 <div class="col-lg-2 d-none d-lg-block"></div>
                             </div>
@@ -181,7 +174,7 @@
             </div>
         </div>
     </div>
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/p" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Built with Mobirise - <a href="https://mobirise.site/l" style="color:#aaa;">Try here</a></p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/countdown/jquery.countdown.min.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/c" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Set up a free website with <a href="https://mobirise.site/z" style="color:#aaa;">Mobirise</a></p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/countdown/jquery.countdown.min.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
 </body>
